added some things

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-video-catalog.css">
+
+    <script src="./ourscripts/gallery.js" defer></script>
+    <link rel="stylesheet" href="./ourcss/gallery.css">
 <!--
 
 TemplateMo 552 Video Catalog
@@ -79,6 +82,101 @@ https://templatemo.com/tm-552-video-catalog
             </div>
             
             <i id="tm-video-control-button" class="fas fa-pause"></i>
+        </div>
+
+        <!-- <div id="menu" class="parallax-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div id="menu-links-div"> 
+                          <div class="tab" id="tab-links">
+                            <p class="tablinks" onclick="menuSwitcher(event, 'specials')" id="defaultOpenCategory">Specials</p>
+                            <p class="tablinks" onclick="menuSwitcher(event, 'starters')">Starters</p>
+                            <p class="tablinks" onclick="menuSwitcher(event, 'chicken')">Chicken</p>
+                            <p class="tablinks" onclick="menuSwitcher(event, 'lamb-and-stuff')">Lamb, Goat, Fish & Egg</p>
+                            <p class="tablinks" onclick="menuSwitcher(event, 'veg')">Vegetarian</p>
+                            <p class="tablinks" onclick="menuSwitcher(event, 'drinks')">Drinks</p>
+                            <p class="tablinks" onclick="menuSwitcher(event, 'desserts')">Desserts</p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-8"></div>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="conatiner-fluid">
+            <div id="content" class="mx-auto tm-content-container">
+                <main>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="gallery-tab" id="gallery-links-div" style="text-align: center; margin-left: auto; margin-right: auto; display: flex;"> 
+                                <p class="gallery-links" onclick="gallerySwitcher(event, 'sale')" id="defaultOpenGallery">Page 1</p>
+                                <p class="gallery-links" onclick="gallerySwitcher(event, 'men')">Page 2</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div id="sale" class="gallery-content">
+                                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                                    <div class="position-relative tm-thumbnail-container">
+                                        <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                            <i class="fas fa-play tm-overlay-icon"></i>
+                                        </a>
+                                    </div>    
+                                    <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Aenean aliquet sapien</h3>
+                                        <p class="tm-catalog-item-text">Video thumbnail has a link to another HTML page. 
+                                            Categories <span class="tm-text-secondary">do not need</span> any JS. 
+                                            They are just separated HTML pages. Paging is at the bottom to extend the list as long as you want. 
+                                            This can be a large catalog.</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                                    <div class="position-relative tm-thumbnail-container">
+                                        <img src="img/tn-02.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                            <i class="fas fa-play tm-overlay-icon"></i>
+                                        </a>
+                                    </div>
+                                    <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Mauris in odio vel odio</h3>
+                                        <p class="tm-catalog-item-text">You may need TemplateMo for a quick chat or send an email if you have any question about this CSS template. 
+                                            <span class="tm-text-secondary">font-family: 'Source Sans Pro', sans-serif; for this template.</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="men" class="gallery-content">
+                                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                                    <div class="position-relative tm-thumbnail-container">
+                                        <img src="img/tn-03.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                            <i class="fas fa-play tm-overlay-icon"></i>
+                                        </a>
+                                    </div>                            
+                                    <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Sagittis sodales enim</h3>
+                                        <p class="tm-catalog-item-text">You are allowed to use this video catalog for your business websites. 
+                                        Please do not make a re-distribution of our template ZIP file on any template collection website.</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                                    <div class="position-relative tm-thumbnail-container">
+                                        <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                            <i class="fas fa-play tm-overlay-icon"></i>
+                                        </a>
+                                    </div>    
+                                    <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Nam tincidunt consectetur</h3>
+                                        <p class="tm-catalog-item-text">You can apply this template for your commercial CMS theme. Nam sem leo, imperdiet non lacinia eget, volutpat ac massa. Donec mattis in velit quis commodo. Cras nec rutrum arcu.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            </div>
         </div>
 
         <div class="container-fluid">
@@ -229,7 +327,7 @@ https://templatemo.com/tm-552-video-catalog
                 </main>
 
                 <!-- Subscribe form and footer links -->
-                <div class="row mt-5 pt-3">
+                <!-- <div class="row mt-5 pt-3">
                     <div class="col-xl-6 col-lg-12 mb-4">
                         <div class="tm-bg-gray p-5 h-100">
                             <h3 class="tm-text-primary mb-3">Do you want to get our latest updates?</h3>
@@ -265,7 +363,7 @@ https://templatemo.com/tm-552-video-catalog
                             </ul>
                         </div>                        
                     </div>
-                </div> <!-- row -->
+                </div> row -->
 
                 <footer class="row pt-5">
                     <div class="col-12">
