--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ https://templatemo.com/tm-552-video-catalog
                 <main>
                     <div class="row">
                         <div class="col-sm-4">
-                            <div class="gallery-tab" id="gallery-links-div" style="text-align: center; margin-left: auto; margin-right: auto; display: flex;"> 
+                            <div class="gallery-tab" id="gallery-links-div" style="text-align: center; left: auto; right: auto; display: flex;"> 
                                 <p class="gallery-links" onclick="gallerySwitcher(event, 'sale')" id="defaultOpenGallery">Page 1</p>
                                 <p class="gallery-links" onclick="gallerySwitcher(event, 'men')">Page 2</p>
                             </div>
