--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-video-catalog.css">
 
+    <link rel="stylesheet" href="./ourcss/pages.css" type="text/css">
     <script src="./ourscripts/gallery.js" defer></script>
     <script src="./ourscripts/items.js" defer></script>
-    <link rel="stylesheet" href="./ourcss/pages.css" type="text/css">
 <!--
 TemplateMo 552 Video Catalog
 https://templatemo.com/tm-552-video-catalog
@@ -205,7 +205,7 @@ https://templatemo.com/tm-552-video-catalog
 
         <div class="container-fluid" id="items">
             <div id="content" class="mx-auto tm-content-container">
-                <div class="container">
+                <div class="">
                     <div class="row">
                         <div class="col-12">
                             <h2 class="tm-page-title mb-4">Our Video Catalog</h2>
@@ -213,7 +213,7 @@ https://templatemo.com/tm-552-video-catalog
                                 <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
                                 <ul class="nav tm-category-list item-tab" id="item-links-div">
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" id="defaultOpenItem" onclick="itemSwitcher(event, 'all')">All</li> <!--<a href="#" class="nav-link tm-category-link active" ></a>-->
-                                    <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'sale')">Drone Shots</li> <!--<a href="#" class="nav-link tm-category-link active" ></a>-->
+                                    <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'on-sale-items')">Drone Shots</li> <!--<a href="#" class="nav-link tm-category-link active" ></a>-->
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-3')">Nature</li> <!--<a href="#" class="nav-link tm-category-link active" ></a>-->
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-4')">Actions</li> <!--<a href="#" class="nav-link tm-category-link active" ></a>-->
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-5')">Featured</li> <!--<a href="#" class="nav-link tm-category-link active" ></a>-->
@@ -269,7 +269,7 @@ https://templatemo.com/tm-552-video-catalog
                             </div>
                         </div>
                     </div>
-                    <div class="row tm-catalog-item-list item-content" id="sale">
+                    <div class="row tm-catalog-item-list item-content" id="on-sale-items">
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
                                 <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
