--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ https://templatemo.com/tm-552-video-catalog
                         </div>
                     </div>
                     <div class="col-sm tm-catalog-item"> 
-                        <div class="position-relative tm-thumbnail-container">
+                        <div class="position-relative tm-thumbnail-container"> <!--test-->
                             <img src="img/tn-02.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
                             <a href="video-page.html" class="position-absolute tm-img-overlay">
                                 <i class="fas fa-play tm-overlay-icon"></i>
