--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./ourcss/pages.css" type="text/css">
     <script src="./ourscripts/gallery.js" defer></script>
     <script src="./ourscripts/items.js" defer></script>
+    <script src="./ourscripts/test.js" defer></script>
 <!--
 TemplateMo 552 Video Catalog
 https://templatemo.com/tm-552-video-catalog
