--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://templatemo.com/tm-552-video-catalog
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-left: 15px; margin-right: 15px;">
                         <div id="sale" class="gallery-content">
                             <div class="row">
                                 <!-- 1 picture -->
@@ -165,7 +165,7 @@ https://templatemo.com/tm-552-video-catalog
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-left: 15px; margin-right: 15px;">
                         <div id="men" class="gallery-content">
                             <div class="row">
                                 <!-- 1 picture -->
