--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://templatemo.com/tm-552-video-catalog
                                 <h1 class="tm-site-name">Video Catalog</h1>
                             </a>
                         </div> -->
-                        <div class="col-5 col-md-8 ml-auto mr-0">
+                        <div  style="flex: none; margin-left: 25%; margin-right: 25%;"> <!--ml-auto mr-0-->
                             <div class="tm-site-nav">
                                 <nav class="navbar navbar-expand-lg mr-0 ml-auto" id="tm-main-nav">
                                     <button class="navbar-toggler tm-bg-black py-2 px-3 mr-0 ml-auto collapsed" type="button"
@@ -45,7 +45,7 @@ https://templatemo.com/tm-552-video-catalog
                                         </span>
                                     </button>
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                                        <ul class="navbar-nav text-uppercase">
+                                        <ul class="navbar-nav text-uppercase" style="left: 0; float: left;">
                                             <li class="nav-item active">
                                                 <a class="nav-link tm-nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                                             </li>
