--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-552-video-catalog
                         </div> -->
                         <div  style="flex: none; margin-left: 25%; margin-right: 25%;"> <!--ml-auto mr-0-->
                             <div class="tm-site-nav">
-                                <nav class="navbar navbar-expand-lg mr-0 ml-auto" id="tm-main-nav">
+                                <nav class="navbar navbar-expand-lg " id="tm-main-nav">
                                     <button class="navbar-toggler tm-bg-black py-2 px-3 mr-0 ml-auto collapsed" type="button"
                                         data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbar-nav"
                                         aria-expanded="false" aria-label="Toggle navigation">
