hakoun wium lie

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ https://templatemo.com/tm-552-video-catalog
                                 <h1 class="tm-site-name">Video Catalog</h1>
                             </a>
                         </div> -->
-                        <div  style="flex: none; margin-left: 25%; margin-right: 25%;"> <!--ml-auto mr-0-->
+                        <div  style="width: 100%; margin-left: 25%; margin-right: 25%;"> <!--ml-auto mr-0-->
                             <div class="tm-site-nav">
-                                <nav class="navbar navbar-expand-lg " id="tm-main-nav">
+                                <nav class="navbar navbar-expand-lg " id="tm-main-nav" style="width: 100%;">
                                     <button class="navbar-toggler tm-bg-black py-2 px-3 mr-0 ml-auto collapsed" type="button"
                                         data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbar-nav"
                                         aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@ https://templatemo.com/tm-552-video-catalog
                                         </span>
                                     </button>
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                                        <ul class="navbar-nav text-uppercase" style="left: 0; float: left;">
+                                        <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item active">
                                                 <a class="nav-link tm-nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                                             </li>
