added the sticky nav :sparkles:

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="css/templatemo-video-catalog.css">
 
     <link rel="stylesheet" href="./ourcss/pages.css" type="text/css">
+    <link rel="stylesheet" href="./ourcss/index.css" type="text/css">
     <script src="./ourscripts/gallery.js" defer></script>
     <script src="./ourscripts/items.js" defer></script>
     <script src="./ourscripts/test.js" defer></script>
+    <script src="./ourscripts/nav.js" defer></script>
 <!--
 TemplateMo 552 Video Catalog
 https://templatemo.com/tm-552-video-catalog
@@ -33,7 +35,7 @@ https://templatemo.com/tm-552-video-catalog
                                 <h1 class="tm-site-name">Video Catalog</h1>
                             </a>
                         </div> -->
-                        <div  style="width: 100%; margin-left: 25%; margin-right: 25%;"> <!--ml-auto mr-0-->
+                        <div style="width: 100%; margin-left: 25%; margin-right: 25%;"> <!--ml-auto mr-0-->
                             <div class="tm-site-nav">
                                 <nav class="navbar navbar-expand-lg " id="tm-main-nav" style="width: 100%;">
                                     <button class="navbar-toggler tm-bg-black py-2 px-3 mr-0 ml-auto collapsed" type="button"
@@ -44,7 +46,7 @@ https://templatemo.com/tm-552-video-catalog
                                             <i class="fas fa-times tm-menu-opened-icon"></i>
                                         </span>
                                     </button>
-                                    <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
+                                    <div id="navbar-sticky" class="collapse navbar-collapse tm-nav" id="navbar-nav">
                                         <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item active">
                                                 <a class="nav-link tm-nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
