:sparkles: styled the scroll wheel

--- a/index.html
+++ b/index.html
@@ -21,6 +21,36 @@
 TemplateMo 552 Video Catalog
 https://templatemo.com/tm-552-video-catalog
 -->
+    <style>
+        body {
+            overflow: overlay;
+        }
+        /* width */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #888;
+            transition: 0.3s;
+            border-radius: 10px;
+        }
+
+        ::-webkit-scrollbar-corner {
+            border-radius: 10px;
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+    </style>
 </head>
 
 <body>
