--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ https://templatemo.com/tm-552-video-catalog
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo01" style="justify-content: center; ">
                           <ul class="nav justify-content-center navbar-nav-scroll" style="max-height: 100px;">
                             <li class="nav-item">
-                              <a class="nav-link active" href="#">Active</a>
+                              <a class="nav-link active" href="#home">Active</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Link</a>
+                              <a class="nav-link" href="#about">Link</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#">Link</a>
