MAJOR CHANGES :boom:

--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@ https://templatemo.com/tm-552-video-catalog
             </ul>
         </div>
 
-        <button id="navbar-responsive-toggle">nav</button>
-        <div class="title-text-div">
-            <h1 class="title-text">Preet Fabrics</h1>
+        <div id="navbar-responsive-toggle">
+            <div class="navbar-responsive-toggle-bar" id="navbar-responsive-toggle-bar-1"></div>
+            <div class="navbar-responsive-toggle-bar" id="navbar-responsive-toggle-bar-2"></div>
+            <div class="navbar-responsive-toggle-bar" id="navbar-responsive-toggle-bar-3"></div>
         </div>
-        <form action="#about">
-            <button class="btn p-3 discover-button">Discover</button>
-        </form>
+        <!-- <button id="navbar-responsive-toggle">nav</button> -->
         <div class="navbar-div-responsive">
             <ul class="nav-ul-responsive">
                 <li class="nav-li-responsive"><a href="#home">Home</a></li>
@@ -54,6 +53,12 @@ https://templatemo.com/tm-552-video-catalog
                 <li class="nav-li-responsive"><a href="#items">Items</a></li>
             </ul>
         </div>
+        <div class="title-text-div">
+            <h1 class="title-text">Preet Fabrics</h1>
+        </div>
+        <form action="#about">
+            <button class="btn p-3 discover-button">Discover</button>
+        </form>
     </div>
     <!-- <div class="tm-page-wrap mx-auto">
         <div class="position-relative">
