--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ https://templatemo.com/tm-552-video-catalog
 </head>
 
 <body>
-    <div class="main-page-div">
+    <div class="main-page-div" id="home">
         <div class="navbar-div" id="navbar-sticky">
             <ul class="nav-ul">
                 <li class="nav-li"><a href="#home">Home</a></li>
                 <li class="nav-li"><a href="#about">About</a></li>
                 <li class="nav-li"><a href="#on-sale">On Sale</a></li>
-                <li class="nav-li"><a href="#items">Items</a></li>
+                <li class="nav-li"><a href="#items">All Items</a></li>
             </ul>
         </div>
 
@@ -149,7 +149,7 @@ https://templatemo.com/tm-552-video-catalog
                 <div class="row mt-3 mb-5 pb-3">
                     <div class="col-12">
                         <div class="mx-auto tm-about-text-container px-3">
-                            <h2 class="tm-page-title mb-4 tm-text-primary">About the Video Catalog</h2>
+                            <h2 class="tm-page-title mb-4 tm-text-primary" style="color: teal;">About the Video Catalog</h2>
                             <p class="mb-4">Video Catalog is free HTML CSS template for your website. This Bootstrap v4.4.1 website template is 100% free download for everyone. You can modify and expand this template for your CMS websites. You can use it for commercial or non-commercial work. If you wish to support <a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>, please contact us.</p>
                             <p class="mb-4">You are <u>not allowed</u> to re-distribute the template ZIP file on any template collection website.</p>
                             <p class="mb-4">Vivamus sit amet justo sed erat iaculis consequat. Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu. Etiam a bibendum lorem. Curabitur ac bibendum odio. Vivamus euismod dui mauris, ut tincidunt mi congue quis.</p>
@@ -305,10 +305,10 @@ https://templatemo.com/tm-552-video-catalog
                 <div class="">
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="tm-page-title mb-4">Our Video Catalog</h2>
+                            <h2 class="tm-page-title mb-4" style="color: teal;">Our Video Catalog</h2>
                             <div class="tm-categories-container mb-5">
-                                <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
-                                <ul class="nav tm-category-list item-tab" id="item-links-div">
+                                <h3 class="tm-text-primary tm-categories-text" style="color: teal;">Categories:</h3>
+                                <ul class="nav tm-category-list item-tab" id="item-links-div" style="color: teal;">
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" id="defaultOpenItem" onclick="itemSwitcher(event, 'all')">All</li>
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'on-sale-items')">Drone Shots</li>
                                     <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-3')">Nature</li>
@@ -595,7 +595,7 @@ https://templatemo.com/tm-552-video-catalog
 
             <footer class="row pt-5">
                 <div class="col-12">
-                    <p class="text-right">Copyright 2020 The Video Catalog Company
+                    <p class="text-right" style="color: teal;">Copyright 2020 The Video Catalog Company
 
                     - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
                 </div>
