MAJOR CHANGES :boom:

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- https://fonts.google.com/ -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -47,18 +47,16 @@ https://templatemo.com/tm-552-video-catalog
         <!-- <button id="navbar-responsive-toggle">nav</button> -->
         <div class="navbar-div-responsive">
             <ul class="nav-ul-responsive">
-                <li class="nav-li-responsive"><a href="#home">Home</a></li>
-                <li class="nav-li-responsive"><a href="#about">About</a></li>
-                <li class="nav-li-responsive"><a href="#on-sale">On Sale</a></li>
-                <li class="nav-li-responsive"><a href="#items">Items</a></li>
+                <li class="nav-li-responsive"><a href="#home" onclick="document.querySelector('#navbar-responsive-toggle').click()">Home</a></li>
+                <li class="nav-li-responsive"><a href="#about" onclick="document.querySelector('#navbar-responsive-toggle').click()">About</a></li>
+                <li class="nav-li-responsive"><a href="#on-sale" onclick="document.querySelector('#navbar-responsive-toggle').click()">On Sale</a></li>
+                <li class="nav-li-responsive"><a href="#items" onclick="document.querySelector('#navbar-responsive-toggle').click()">Items</a></li>
             </ul>
         </div>
         <div class="title-text-div">
             <h1 class="title-text">Preet Fabrics</h1>
         </div>
-        <form action="#about">
-            <button class="btn p-3 discover-button">Discover</button>
-        </form>
+        <button class="btn discover-button">Discover</button>
     </div>
     <!-- <div class="tm-page-wrap mx-auto">
         <div class="position-relative">
