--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-552-video-catalog
             <h1 class="title-text">Preet Fabrics</h1>
         </div>
         <form action="#about">
-            <button class="btn p-3 discover-button">Discover</button>
+            <button class="btn p-3 discover-button">Learn More</button>
         </form>
     </div>
     <!-- <div class="tm-page-wrap mx-auto">
