--- a/index.html
+++ b/index.html
@@ -580,27 +580,24 @@ https://templatemo.com/tm-552-video-catalog
             </div>
         </div>
 
-        <div class="container-fluid">
-            <!-- Each section of items (mens, on-sale, etc) -->
-            <!-- Catalog Paging Buttons -->
-            <!-- <div>
-                <ul class="nav tm-paging-links">
-                    <li class="nav-item active"><a href="#" class="nav-link tm-paging-link">1</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link tm-paging-link">2</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link tm-paging-link">3</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link tm-paging-link">4</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link tm-paging-link">></a></li>
-                </ul>
-            </div> -->
+        
 
-            <footer class="row pt-5">
-                <div class="col-12">
-                    <p class="text-right" style="color: teal;">Copyright 2020 The Video Catalog Company
+    </div>
+    <div class="" style="display: flex; justify-content: center; align-items: center; height: 14vh; margin: 0; background-color: #c4bfbe;">
+        <!-- Each section of items (mens, on-sale, etc) -->
+        <!-- Catalog Paging Buttons -->
+        <!-- <div>
+            <ul class="nav tm-paging-links">
+                <li class="nav-item active"><a href="#" class="nav-link tm-paging-link">1</a></li>
+                <li class="nav-item"><a href="#" class="nav-link tm-paging-link">2</a></li>
+                <li class="nav-item"><a href="#" class="nav-link tm-paging-link">3</a></li>
+                <li class="nav-item"><a href="#" class="nav-link tm-paging-link">4</a></li>
+                <li class="nav-item"><a href="#" class="nav-link tm-paging-link">></a></li>
+            </ul>
+        </div> -->
 
-                    - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
-                </div>
-            </footer>
-        </div>
+  
+        <p class="text-center" style="font-size: 2ch; margin: 0; color: teal;">Copyright 2020 The Video Catalog Company - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
 
     </div> <!-- .tm-page-wrap -->
 
