--- a/index.html
+++ b/index.html
@@ -581,7 +581,15 @@ https://templatemo.com/tm-552-video-catalog
         
 
     </div>
-    <div class="" style="display: flex; justify-content: center; align-items: center; height: 14vh; margin: 0; background-color: #c4bfbe;">
+    <div class="" style="display: flex; justify-content: center; text-align: center; height: 10vh; margin: 0; background-color: grey">
+
+        <div style="display: block;">
+            <p style="font-size: 3ch;">Contact Us</p>
+            <p style="font-size: 2ch;">Address: 5156 Mowry Ave, Fremont, CA 94538</p>
+        </div>
+        
+    </div>
+    <div class="" style="display: flex; justify-content: center; align-items: center; height: 10vh; margin: 0; background-color: hsl(186, 50%, 24%)">
         <!-- Each section of items (mens, on-sale, etc) -->
         <!-- Catalog Paging Buttons -->
         <!-- <div>
